welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:10: error: ')' expected but '=' found.
	if ((aA - bB)=0) {
                     ^close10:13: error: illegal start of simple expression
} 
^